Typos, shorten ML training due to perf / presentation constraint

--- a/07-Bag-Future.ipynb
+++ b/07-Bag-Future.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evens = b_squared.groupby(lambda x: x%2)"
+    "even_odd_groups = b_squared.groupby(lambda x: x%2)"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evens.take(1)[0][1]"
+    "even_odd_groups.take(1)[0][1]"
    ]
   },
   {
@@ -113,7 +113,7 @@
    "source": [
     "Remember, bags aren't ordered -- so you may or may not see the output in ascending sequence. \n",
     "\n",
-    "Also, as weith many data-parallel collection frameworks, we need need to be careful about \"materializing groups\" ... In this case, we've asked Dask to fully compute the two groups (odd and even squares). \n",
+    "Also, as with many data-parallel collection frameworks, we need need to be careful about \"materializing groups\" ... In this case, we've asked Dask to fully compute the two groups (odd and even squares). \n",
     "\n",
     "It's a silly example, but we definitely want to be careful about this, since on real large datasets, it's common for individual groups to be too large to fit in memory (imagine taking your company's transactions and grouping by country!)\n",
     "\n",
