--- a/06-ML.ipynb
+++ b/06-ML.ipynb
@@ -205,7 +205,7 @@
    "source": [
     "from dask_ml.linear_model import LinearRegression\n",
     "\n",
-    "lr = LinearRegression()\n",
+    "lr = LinearRegression(max_iter=10)\n",
     "lr_model = lr.fit(X_train, y_train)"
    ]
   },
