Add distributed scheduler/client to Dask Array demo, since it's especially nice to see results in the out-of-core matrix op at the end Fix out-of-place cell that caused description and cell execution to not match in concurrent.futures explanation

--- a/05-Array.ipynb
+++ b/05-Array.ipynb
@@ -33,6 +33,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dask.distributed import Client\n",
+    "\n",
+    "client = Client(n_workers=2, threads_per_worker=1, memory_limit='1GB')\n",
+    "client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "import dask.array as da"
    ]
@@ -276,6 +288,15 @@
    "outputs": [],
    "source": [
     "result.compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.close()"
    ]
   },
   {
