--- a/07-Bag-Future.ipynb
+++ b/07-Bag-Future.ipynb
@@ -468,6 +468,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To delete `Futures` in distributed memory, use the `del` keyword"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del f"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -511,22 +527,6 @@
    "outputs": [],
    "source": [
     "results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To delete `Futures` in distributed memory, use the `del` keyword"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del f, futures[:]"
    ]
   },
   {
