Fix relative image link in notebook 1, add image to local images

--- a/01-Intro.ipynb
+++ b/01-Intro.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='https://dask.org/_images/dask_horizontal_white_no_pad.svg' style='background:#000' width=400>\n",
+    "<img src='images/dask_horizontal_white_no_pad.svg' style='background:#000' width=400>\n",
     "\n",
     "# Dask natively scales Python\n",
     "## Dask provides advanced parallelism for analytics, enabling performance at scale for the tools you love\n",
