--- a/06-ML.ipynb
+++ b/06-ML.ipynb
@@ -88,6 +88,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dask.distributed import Client\n",
+    "\n",
+    "client = Client(n_workers=2, threads_per_worker=1, memory_limit='1GB')\n",
+    "\n",
+    "client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import dask.dataframe\n",
     "\n",
     "ddf = dask.dataframe.read_csv('data/diamonds.csv', blocksize=1e6)\n",
@@ -259,6 +272,15 @@
     "We'll do an official lab where we try at least one additional algorithm on real data.\n",
     "\n",
     "Although we can smoke-test algorithms with synthetic data in the current Dask-ML version (1.0.0), that may be a good use of the limited time in a short session such as this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.close()"
    ]
   },
   {
