Update ML example w solver, add ML lab, data, solution

--- a/06-ML.ipynb
+++ b/06-ML.ipynb
@@ -218,7 +218,7 @@
    "source": [
     "from dask_ml.linear_model import LinearRegression\n",
     "\n",
-    "lr = LinearRegression(max_iter=10)\n",
+    "lr = LinearRegression(solver='lbfgs')\n",
     "lr_model = lr.fit(X_train, y_train)"
    ]
   },
@@ -267,12 +267,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sometime very soon...\n",
+    "### (Optional) Hands-On Lab\n",
     "\n",
-    "We'll do an official lab where we try at least one additional algorithm on real data.\n",
+    "We can take a quick try ourselves using the UC Irvine ML repository's *Combined Cycle Power Plant Data Set* (https://archive.ics.uci.edu/ml/datasets/Combined+Cycle+Power+Plant)\n",
     "\n",
-    "Although we can smoke-test algorithms with synthetic data in the current Dask-ML version (1.0.0), that may be a good use of the limited time in a short session such as this."
+    "This dataset consists of about 10,000 records of measurements relating to peaker power plants.\n",
+    "- Temperature (T) in the range 1.81°C and 37.11°C,\n",
+    "- Ambient Pressure (AP) in the range 992.89-1033.30 millibar,\n",
+    "- Relative Humidity (RH) in the range 25.56% to 100.16%\n",
+    "- Exhaust Vacuum (V) in the range 25.36-81.56 cm Hg\n",
+    "- Net hourly electrical energy output (EP) 420.26-495.76 MW\n",
+    "\n",
+    "We want to model the power output as a function of the other parameters."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ddf = dask.dataframe.read_csv('data/powerplant.csv', sample=512000, blocksize=4e4)\n",
+    "ddf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Insert more cells here as needed using the 'b' hotkey, the menu, or by copying and pasting from the earlier example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -282,13 +313,6 @@
    "source": [
     "client.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
