Adjust data size and ml max_iter since we don't know how much compute we'll have when we demo (gke binder was taking too long on the 'full' version)

--- a/06a-ML-Solution.ipynb
+++ b/06a-ML-Solution.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "from dask_ml.linear_model import LinearRegression\n",
     "\n",
-    "lr = LinearRegression(solver='lbfgs')\n",
+    "lr = LinearRegression(solver='lbfgs', max_iter=10)\n",
     "lr_model = lr.fit(X_train, y_train)"
    ]
   },
