--- a/07-Bag-Future.ipynb
+++ b/07-Bag-Future.ipynb
@@ -21,6 +21,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dask.distributed import Client\n",
+    "\n",
+    "client = Client(n_workers=2, threads_per_worker=1, memory_limit='128MB')\n",
+    "\n",
+    "client"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -104,6 +117,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "even_odd_groups.compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "even_odd_groups.take(1)[0][1]"
    ]
   },
@@ -174,15 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import time\n",
+    "\n",
     "def inc(x):\n",
     "    time.sleep(0.5)\n",
     "    return x + 1\n",
@@ -406,19 +421,7 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "from dask.distributed import Client\n",
     "\n",
-    "client = Client(n_workers=2, threads_per_worker=1, memory_limit='128MB')\n",
-    "\n",
-    "client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def inc(x):\n",
     "    time.sleep(random.uniform(0, 2))\n",
     "    return x + 1"
@@ -586,13 +589,6 @@
    "source": [
     "client.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
