--- a/06-ML.ipynb
+++ b/06-ML.ipynb
@@ -272,11 +272,11 @@
     "We can take a quick try ourselves using the UC Irvine ML repository's *Combined Cycle Power Plant Data Set* (https://archive.ics.uci.edu/ml/datasets/Combined+Cycle+Power+Plant)\n",
     "\n",
     "This dataset consists of about 10,000 records of measurements relating to peaker power plants.\n",
-    "- Temperature (T) in the range 1.81°C and 37.11°C,\n",
+    "- Temperature (AT) in the range 1.81°C and 37.11°C,\n",
     "- Ambient Pressure (AP) in the range 992.89-1033.30 millibar,\n",
     "- Relative Humidity (RH) in the range 25.56% to 100.16%\n",
     "- Exhaust Vacuum (V) in the range 25.36-81.56 cm Hg\n",
-    "- Net hourly electrical energy output (EP) 420.26-495.76 MW\n",
+    "- Net hourly electrical energy output (PE) 420.26-495.76 MW\n",
     "\n",
     "We want to model the power output as a function of the other parameters."
    ]
@@ -331,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
