Update link for Tensorflow (Keras) integration add jupyter and dask scratch to gitignore

--- a/06-ML.ipynb
+++ b/06-ML.ipynb
@@ -70,7 +70,7 @@
     "est.fit(train, train_labels)\n",
     "```\n",
     "\n",
-    "See [Dask-ML + XGBoost](https://ml.dask.org/xgboost.html) or [Dask-ML + TensorFlow](https://ml.dask.org/tensorflow.html) documentation for more information.\n",
+    "See [Dask-ML + XGBoost](https://ml.dask.org/xgboost.html) or [Dask-ML + TensorFlow](https://ml.dask.org/keras.html) documentation for more information.\n",
     "\n",
     "Scikit-Learn API[](https://ml.dask.org/#scikit-learn-api \"Permalink to this headline\")\n",
     "--------------------------------------------------------------------------------------\n",
